fixed summary section statistics broken style

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   color: var(--color-text);
   background-color: var(--color-background-900);
   padding: 2.4rem;
+  height: 100dvh;
 }
 
 .customFont {
@@ -128,7 +129,7 @@ body {
 
 .box {
   width: 48rem;
-  min-height: 40rem;
+  max-height: 62rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
   overflow: auto;
@@ -289,10 +290,18 @@ body {
 /* ******* */
 
 .summary {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   padding: 2.2rem 3.2rem 1.8rem 3.2rem;
   border-radius: 0.9rem;
   background-color: var(--color-background-100);
   box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.2);
+}
+
+.summary-stats {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .summary h2 {
